@@ -1,4 +1,4 @@
-$Id: History,v 1.54 2002-11-18 21:41:33 asaim Exp $
+$Id: History,v 1.55 2002-12-06 12:16:43 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Dec 6, 2002, J.Allison (tracking-V04-01-12)
+- Fixed unprotected pointer in G4SmoothTrajectoryPoint::CreateAttValues.
+
+Dec 4, 2002, T.Sasaki (tracking-V04-01-11)
+- static Get/SetInstnce methods has moved to .cc from .hh.
 
 Nov 18, 2002, M.Asai (tracking-V04-01-10)
 - Tagged.
